--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@rneui/themed": "^4.0.0-rc.8",
+    "formik": "^2.4.6",
     "install": "^0.13.0",
     "moment": "^2.30.1",
     "npm": "^10.8.2",
@@ -22,12 +23,14 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-otp-textinput": "^1.1.6",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-size-matters": "^0.4.2",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
