--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "formik": "^2.4.6",
     "install": "^0.13.0",
@@ -31,6 +32,9 @@
     "react-native-select-dropdown": "^4.0.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
