--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "npm": "^10.8.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-document-picker": "^9.3.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-otp-textinput": "^1.1.6",
     "react-native-raw-bottom-sheet": "^3.0.0",
