--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-document-picker": "^9.3.1",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-masonry-list": "^2.16.2",
     "react-native-otp-textinput": "^1.1.6",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-safe-area-context": "^4.10.9",
