--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-lottie-splash-screen": "^1.1.2",
     "react-native-masonry-list": "^2.16.2",
     "react-native-otp-textinput": "^1.1.6",
     "react-native-raw-bottom-sheet": "^3.0.0",
