--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.72.4",
     "react-native-document-picker": "^9.3.1",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-draglist": "github:fivecar/react-native-draglist",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
