--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-masonry-grid": "^0.0.3",
     "react-native-otp-textinput": "^1.1.6",
     "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-reanimated": "^3.5.0",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-select-dropdown": "^4.0.1",
