--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-lottie-splash-screen": "^1.1.2",
     "react-native-masonry-grid": "^0.0.3",
     "react-native-otp-textinput": "^1.1.6",
+    "react-native-pinchable": "^0.2.1",
     "react-native-progress": "^5.0.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.5.0",
