--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm": "^10.8.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-blob-util": "^0.19.11",
     "react-native-document-picker": "^9.3.1",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-draglist": "github:fivecar/react-native-draglist",
@@ -32,6 +33,7 @@
     "react-native-lottie-splash-screen": "^1.1.2",
     "react-native-masonry-grid": "^0.0.3",
     "react-native-otp-textinput": "^1.1.6",
+    "react-native-pdf": "^6.7.5",
     "react-native-pinchable": "^0.2.1",
     "react-native-progress": "^5.0.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
@@ -44,6 +46,7 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "rn-fetch-blob": "^0.12.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
