--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-lottie-splash-screen": "^1.1.2",
     "react-native-masonry-grid": "^0.0.3",
     "react-native-otp-textinput": "^1.1.6",
