--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "formik": "^2.4.6",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "moment": "^2.30.1",
-    "npm": "^10.8.2",
+    "npm": "^10.9.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-blob-util": "^0.19.11",
+    "react-native-device-info": "^14.0.0",
     "react-native-document-picker": "^9.3.1",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-draglist": "github:fivecar/react-native-draglist",
