--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "npm": "^10.9.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-actions-sheet": "^0.9.7",
     "react-native-blob-util": "^0.19.11",
     "react-native-device-info": "^14.0.0",
     "react-native-document-picker": "^9.3.1",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-draglist": "github:fivecar/react-native-draglist",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -43,12 +44,14 @@
     "react-native-progress": "^5.0.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.5.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "rn-fetch-blob": "^0.12.0",
