--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,7 +41,7 @@ newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
-hermesEnabled=true
+hermesEnabled=false
 
 MYAPP_RELEASE_STORE_FILE=FlashCard.jks
 MYAPP_RELEASE_KEY_ALIAS=FlashCard
