--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ dependencies {
     implementation project(':react-native-localization')
     implementation 'com.android.billingclient:billing:6.0.1'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation project(':react-native-iap')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
