--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "formik": "^2.4.6",
-    "i": "^0.3.7",
     "moment": "^2.30.1",
-    "npm": "^10.9.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-actions-sheet": "^0.9.7",
@@ -33,6 +31,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-google-mobile-ads": "^14.7.1",
+    "react-native-iap": "^12.16.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
