--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,10 +18,14 @@
         android:allowBackup="false"
         android:theme="@style/AppTheme">
 
-        <meta-data
+        <!-- <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/APPLICATION_ID"
-            tools:replace="android:value"/>
+            tools:replace="android:value"/> -->
+
+        <meta-data
+        android:name="com.google.android.gms.ads.APPLICATION_ID"
+        android:value="ca-app-pub-3940256099942544~3347511713"/>
 
         <activity
             android:name=".MainActivity"
