--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -45,6 +45,9 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=false
 
+systemProp.http.proxyHost=
+systemProp.https.proxyHost=
+
 MYAPP_RELEASE_STORE_FILE=FlashCard.jks
 MYAPP_RELEASE_KEY_ALIAS=FlashCard
 MYAPP_RELEASE_STORE_PASSWORD=FlashCard@123
