--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "toggle-switch-react-native": "^3.3.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
