--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^21.6.0",
+    "@react-native-firebase/firestore": "^21.7.4",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
@@ -24,7 +26,7 @@
     "react-native": "0.72.4",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-blob-util": "^0.19.11",
-    "react-native-device-info": "^14.0.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-document-picker": "^9.3.1",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-draglist": "github:fivecar/react-native-draglist",
