--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "formik": "^2.4.6",
+    "i": "^0.3.7",
+    "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
+    "npm": "^11.1.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-actions-sheet": "^0.9.7",
