--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
   "name": "FlashCard",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:release": "cd android && ./gradlew assembleRelease",
+    "android:bundle": "cd android && ./gradlew bundleRelease",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "start:reset": "react-native start --reset-cache",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json}\"",
+    "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "clean": "cd android && ./gradlew clean && cd .. && rm -rf node_modules/.cache",
+    "clean:all": "rm -rf node_modules && rm -rf ios/Pods && npm install && cd ios && pod install",
+    "pods": "cd ios && pod install"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
@@ -21,10 +33,8 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "formik": "^2.4.6",
-    "i": "^0.3.7",
     "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
-    "npm": "^11.1.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-actions-sheet": "^0.9.7",
@@ -70,18 +80,26 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
+    "@testing-library/react-native": "^12.4.0",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
+    "prettier": "^3.2.0",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^5.0.0"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   }
 }
