--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Study Kit",
+  "name": "FlashCard",
   "displayName": "Study Kit",
   "react-native-google-mobile-ads": {
     "android_app_id": "ca-app-pub-9823475062473479~5043844703"
