change app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "FlashCard",
-  "displayName": "Study Kit",
+  "displayName": "Bible Flashcards & Notes",
   "react-native-google-mobile-ads": {
     "android_app_id": "ca-app-pub-9823475062473479~5043844703"
   }
