--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+platform :ios, '13.4'
 prepare_react_native_project!
 
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
@@ -19,14 +19,14 @@ prepare_react_native_project!
 # ```
 flipper_config = ENV['NO_FLIPPER'] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled
 
-linkage = ENV['USE_FRAMEWORKS']
-if linkage != nil
-  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
-  use_frameworks! :linkage => linkage.to_sym
-end
-
 target 'FlashCard' do
   config = use_native_modules!
+  
+  # Enable modular headers for Firebase pods that need it
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'FirebaseCoreExtension', :modular_headers => true
+  pod 'FirebaseFirestoreInternal', :modular_headers => true
 
   # Flags change depending on the env values.
   flags = get_default_flags()
@@ -58,5 +58,41 @@ target 'FlashCard' do
       :mac_catalyst_enabled => false
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    
+    # Fix deployment target for all pods
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 13.4
+          config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.4'
+        end
+        
+        # Enable modular headers for Firebase Swift pods only
+        if target.name.start_with?('Firebase') || target.name == 'GoogleUtilities'
+          config.build_settings['DEFINES_MODULE'] = 'YES'
+        end
+        
+        # Fix FBReactNativeSpec header search paths for Xcode 17
+        if target.name.start_with?('React-')
+          config.build_settings['HEADER_SEARCH_PATHS'] ||= ['$(inherited)']
+          config.build_settings['HEADER_SEARCH_PATHS'] << "\"$(PODS_ROOT)/../build/generated/ios\""
+          config.build_settings['HEADER_SEARCH_PATHS'] << "\"${PODS_CONFIGURATION_BUILD_DIR}/FBReactNativeSpec/FBReactNativeSpec.framework/Headers\""
+        end
+      end
+    end
+    
+    # Fix Firebase linking issues - remove weak framework references
+    installer.pods_project.targets.each do |target|
+      if target.name == 'Pods-FlashCard'
+        target.build_configurations.each do |config|
+          xcconfig_path = config.base_configuration_reference.real_path
+          xcconfig = File.read(xcconfig_path)
+          # Remove weak_framework references for Firebase pods
+          xcconfig = xcconfig.gsub(/-weak_framework "FirebaseFirestoreInternal"/, '')
+          xcconfig = xcconfig.gsub(/-weak_framework "FirebaseCore"/, '')
+          xcconfig = xcconfig.gsub(/-weak_framework "FirebaseCoreExtension"/, '')
+          File.write(xcconfig_path, xcconfig)
+        end
+      end
+    end
   end
 end
