--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,33 @@ yarn-error.log
 
 # testing
 /coverage
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
+
+# Firebase config files (sensitive)
+google-services.json
+GoogleService-Info.plist
+firebase.json
+
+# API keys and secrets
+**/secrets/
+**/config/secret*.json
+private_key.pepk
+
+# Security
+*.keystore
+!debug.keystore
+*.jks
+*.p12
+*.key
+*.pem
+
+# IDE
+.vscode/
+.idea/
