--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-device-info": "^14.0.4",
     "react-native-document-picker": "^9.3.1",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-google-mobile-ads": "^14.7.1",
     "react-native-iap": "^12.16.0",
